fixed spacing navBar

--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -7,10 +7,10 @@ nav{
     position: fixed;
     top:0;
     left:0;
-    padding:15px;
     align-items: center;
     justify-content: space-between;
     margin-left: 0;
+    font-size: 20px;
 
 }
 ul {
@@ -34,6 +34,9 @@ button {
 button:hover{
     background-color: rgba(255, 255, 255, 0.2);
 }
-button:active {
-    border-bottom: 2px solid white; /* Adds a bottom border when active */
+.nav-left {
+    margin-left:20%/* Pushes Home to the left */
+}
+.nav-right{
+    margin-right:20%;
 }
